White space fix in mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,8 @@
 
 
+/* * {
+    background: #000 !important;
+    color: #0f0 !important;
+    outline: solid #f00 1px !important;
+  }
+    */
