--- a/src/Home/homeMobile.css
+++ b/src/Home/homeMobile.css
@@ -88,6 +88,9 @@
         width: 60%;
     }
 
+    .productList{
+        width: 98%;
+    }
     .productList,
     .serviceDetails {
         flex-direction: column;
@@ -145,6 +148,10 @@
 
     .topServices .service {
         width: 100%;
+        margin-top: 4%;
+    }
+    .service {
+        width: 96% !important;
         margin-top: 4%;
     }
 
