--- a/src/globals.css
+++ b/src/globals.css
@@ -3,11 +3,14 @@ body,
 #root {
   height: 100%;
   width: 100%;
-  scroll-behavior: smooth;
+
   padding: 0px !important;
   margin: 0px !important;
 
   /* overflow-x: hidden; */
+}
+html{
+    /* scroll-behavior: smooth; */
 }
 
 /* * {
